kubernetes/development/ubuntu/ubuntu-xfce4.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-xfce4
  namespace: development
  labels:
    app: ubuntu-xfce4
    sablier.enable: "true"
    sablier.group: ubuntu-xfce4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-xfce4
  template:
    metadata:
      labels:
        task: development
        app: ubuntu-xfce4
    spec:
      priorityClassName: development-priority
      containers:
      - name: ubuntu-xfce4
        image: registry.registry.svc.cluster.local:5000/ubuntu-xfce4:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6080
          name: novnc
        - containerPort: 5900
          name: vnc
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        command: ["/bin/sh", "-c"]
        args:
        - /init.sh
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        volumeMounts:
        - name: openvscode-server-home-volume
          mountPath: /home
        - name: dev-shm
          mountPath: /dev/shm
        - name: ubuntu-xfce4-init
          mountPath: /init.sh
          subPath: init.sh
        - name: ubuntu-xfce4-install-tools
          mountPath: /install-tools.sh
          subPath: install-tools.sh
      volumes:
      - name: openvscode-server-home-volume
        persistentVolumeClaim:
          claimName: openvscode-server-home-claim
      - name: dev-shm
        emptyDir:
          medium: Memory
          sizeLimit: 256Mi
      - name: ubuntu-xfce4-init
        configMap:
          name: ubuntu-xfce4-init
          items:
          - key: init.sh
            path: init.sh
          defaultMode: 0755
      - name: ubuntu-xfce4-install-tools
        configMap:
          name: ubuntu-xfce4-install-tools
          items:
          - key: install-tools.sh
            path: install-tools.sh
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-xfce4
  namespace: development
spec:
  ports:
  - port: 80
    targetPort: 6080
    name: novnc
  - port: 5900
    targetPort: 5900
    name: vnc
  selector:
    app: ubuntu-xfce4
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubuntu-xfce4-https
  namespace: development
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "development-authentik-ubuntu-xfce4@kubernetescrd,development-sablier-ubuntu-xfce4@kubernetescrd"
spec:
  tls:
  - secretName: ubuntu-xfce4-bas-tls
  rules:
  - host: ubuntu.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ubuntu-xfce4
            port:
              number: 80
